Prevent filter param from jumping when first filter added. fixes #17964
git-svn-id: https://cbilsvn.pmacs.upenn.edu/svn/gus/WDK/trunk@15077 4235af6a-31f9-0310-9ad3-ecf6348f2534

--- a/View/webapp/wdk/css/wdk-filter-param.css
+++ b/View/webapp/wdk/css/wdk-filter-param.css
@@ -383,7 +383,7 @@
 .filter-items[data-total]:before {
   content: attr(data-total) " selected ";
   font-weight: bold;
-  line-height: 2em;
+  line-height: 2.7em;
 }
 .filter-items li {
   display: inline-block;
